dns/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: dns
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: pihole-ui
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: pihole
              mountPath: "/etc/pihole"
            - name: local-overrides
              mountPath: /etc/dnsmasq.d/09-local-overrides.conf
              subPath: 09-local-overrides.conf
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
        - name: local-overrides
          configMap:
            defaultMode: 420
            name: pihole-local-overrides
