dns/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: dns
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.1.30
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - port: 53
      name: dns-tcp
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: dns
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.1.30
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - port: 53
      name: dns-udp
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
  namespace: dns
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      name: pihole-ui
