dns/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: dns
  labels:
    instance: pihole
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: "pihole.skj.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-ui
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.skj.dev
      secretName: pihole-skj-dev-cert
